--- a/src/Application/Navigation/navigation.scss
+++ b/src/Application/Navigation/navigation.scss
@@ -7,8 +7,43 @@
 	padding: 1em;
 	display: flex;
 	flex-direction: column;
-
+	justify-content: space-between;
+	grid-row: span 2;
 	a {
 		color: white;
+		display: flex;
+		flex-direction: column;
+		align-items: center;
+
+		span {
+			height: 3em;
+			width: 3em;
+			svg {
+				height: 100%;
+				width: 100%;
+			}
+		}
+	}
+
+	.main {
+		a {
+			p {
+				font-size: 1em;
+			}
+		}
+	}
+
+	.logo {
+		padding-bottom: 2em;
+
+		a {
+			svg {
+				width: 4em;
+			}
+		}
+	}
+
+	@media (max-width: 665px) {
+		display: none;
 	}
 }
