--- a/src/Application/Layout/Add/addItem.scss
+++ b/src/Application/Layout/Add/addItem.scss
@@ -1,21 +1,3 @@
 .addItem {
-	padding: 1em;
-	width: 100%;
-	height: 100%;
-
-	button {
-		height: 100%;
-		width: 100%;
-	}
-
-	span {
-		height: 100%;
-		display: flex;
-		justify-content: center;
-		align-items: center;
-		svg {
-			width: 30%;
-			height: 30%;
-		}
-	}
+	padding-left: 1em;
 }
