--- a/src/Account/Reset/reset.scss
+++ b/src/Account/Reset/reset.scss
@@ -12,7 +12,7 @@
 	}
 
 	button {
-		font-family: 'DK Lemon Yellow Sun';
+		font-family: 'Architects Daughter';
 	}
 
 	a {
@@ -21,7 +21,7 @@
 
 	h1 {
 		align-self: center;
-		font-family: 'DK Lemon Yellow Sun';
+		font-family: 'Architects Daughter';
 		font-size: 3em;
 	}
 }
