--- a/src/Application/application.scss
+++ b/src/Application/application.scss
@@ -6,25 +6,14 @@
 	grid-template-rows: min-content 1fr;
 
 	.body {
-		height: 100%;
+		height: 100vh;
 		padding: 1em;
-		max-width: 100%;
-		overflow: auto;
 		.middle {
 			height: 100%;
-			display: flex;
-			flex-direction: column;
+			display: grid;
+			grid-template-rows: max-content 1fr;
+			box-sizing: border-box;
 		}
-	}
-
-	.header {
-		padding: 0.5em;
-		background-color: #ffce48;
-		font-family: 'Architects Daughter';
-		font-size: 1.5em;
-		display: flex;
-		justify-content: space-between;
-		align-items: center;
 	}
 
 	.ant-breadcrumb .anticon,
