--- a/src/Application/Navigation/navigation.scss
+++ b/src/Application/Navigation/navigation.scss
@@ -6,7 +6,7 @@
 	// background: transparent linear-gradient(180deg, #ff5555 0%, #ffce48 100%) 0%
 	// 	0% no-repeat padding-box;
 	color: white;
-	padding: 1em;
+	width: 6vw;
 	display: flex;
 	flex-direction: column;
 	justify-content: space-between;
@@ -19,6 +19,7 @@
 		display: flex;
 		flex-direction: column;
 		align-items: center;
+		padding: 0.5em;
 
 		span {
 			height: 3em;
@@ -28,6 +29,12 @@
 				width: 100%;
 			}
 		}
+	}
+	a:first-child {
+		padding-top: 1em;
+	}
+	a:last-child {
+		padding-bottom: 1em;
 	}
 
 	.main {
@@ -46,5 +53,15 @@
 				width: 5em;
 			}
 		}
+	}
+
+	.active {
+		background-color: white;
+		color: #ff5555;
+		fill: #ff5555;
+	}
+
+	p {
+		margin: 0;
 	}
 }
