--- a/src/Application/Navigation/navigation.scss
+++ b/src/Application/Navigation/navigation.scss
@@ -6,7 +6,7 @@
 	// background: transparent linear-gradient(180deg, #ff5555 0%, #ffce48 100%) 0%
 	// 	0% no-repeat padding-box;
 	color: white;
-	width: 6vw;
+	width: 4vw;
 	display: flex;
 	flex-direction: column;
 	justify-content: space-between;
@@ -20,6 +20,8 @@
 		flex-direction: column;
 		align-items: center;
 		padding: 0.5em;
+		padding-top: 1em;
+    	padding-bottom: 1em;
 
 		span {
 			height: 3em;
@@ -29,9 +31,6 @@
 				width: 100%;
 			}
 		}
-	}
-	a:first-child {
-		padding-top: 1em;
 	}
 	a:last-child {
 		padding-bottom: 1em;
@@ -46,12 +45,13 @@
 	}
 
 	.logo {
-		padding-bottom: 2em;
-
-		a {
-			svg {
-				width: 5em;
-			}
+		display: flex;
+		justify-content: center;
+		padding-bottom: 3.7em;
+		padding-top: 1em;
+		img {
+			border-radius: 50%;
+			border: 2px solid white;
 		}
 	}
 
@@ -59,9 +59,27 @@
 		background-color: white;
 		color: #ff5555;
 		fill: #ff5555;
+		border-left: 5px solid #ff5555;
+		border-top-left-radius: 30%;
+		border-bottom-left-radius: 30%;
 	}
 
 	p {
 		margin: 0;
+	}
+
+	[role='menu'] {
+		border: none;
+	}
+
+	[role='button'] {
+		height: 100% !important;
+		padding: 0;
+		background-color: #ff5555;
+		margin: 0;
+	}
+
+	i {
+		display: none;
 	}
 }
