--- a/src/Components/Refinement/refinement.scss
+++ b/src/Components/Refinement/refinement.scss
@@ -7,3 +7,13 @@
         margin-left: 0.5em;
     }
 }
+
+.title {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+
+    p {
+        margin-left: 1em;
+    }
+}
