--- a/src/Application/Companies/Company/Detail/Constraints/constraints.scss
+++ b/src/Application/Companies/Company/Detail/Constraints/constraints.scss
@@ -6,8 +6,8 @@ p {
     margin: 0;
 }
 
-.constraints {
-    padding-bottom: 3em;
-    display: flex;
-    flex-direction: column;
-}
+// .constraints {
+//     padding-bottom: 3em;
+//     display: flex;
+//     flex-direction: column;
+// }
