--- a/src/Application/Layout/Detail/Constraints/constraints.scss
+++ b/src/Application/Layout/Detail/Constraints/constraints.scss
@@ -6,12 +6,6 @@ p {
     margin: 0;
 }
 
-.constraints {
-    padding-bottom: 3em;
-    display: flex;
-    flex-direction: column;
-}
-
 .day {
     display: grid;
     grid-template-columns: 100px 1fr;
@@ -19,5 +13,17 @@ p {
     label {
         justify-self: flex-end;
         margin-right: 1em;
+    }
+}
+
+.noData-container {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    height: 100%;
+    justify-content: center;
+
+    .noData {
+        height: auto;
     }
 }
