--- a/src/Application/Navigation/navigation.scss
+++ b/src/Application/Navigation/navigation.scss
@@ -1,9 +1,9 @@
 .navigation {
 	max-height: 100vh;
-	background-color: #ff5555;
+	background-color: var(--PRIMARY-120);
 	position: sticky;
 	top: 0;
-	// background: transparent linear-gradient(180deg, #ff5555 0%, #ffce48 100%) 0%
+	// background: transparent linear-gradient(180deg, var(--PRIMARY-120) 0%, #ffce48 100%) 0%
 	// 	0% no-repeat padding-box;
 	color: white;
 	width: 4vw;
@@ -57,9 +57,9 @@
 
 	.active {
 		background-color: white;
-		color: #ff5555;
-		fill: #ff5555;
-		border-left: 5px solid #ff5555;
+		color: var(--PRIMARY-120);
+		fill: var(--PRIMARY-120);
+		border-left: 5px solid var(--PRIMARY-120);
 		border-top-left-radius: 30%;
 		border-bottom-left-radius: 30%;
 	}
@@ -75,7 +75,7 @@
 	[role='button'] {
 		height: 100% !important;
 		padding: 0;
-		background-color: #ff5555;
+		background-color: var(--PRIMARY-120);
 		margin: 0;
 	}
 
