--- a/src/Application/Layout/Detail/detail.scss
+++ b/src/Application/Layout/Detail/detail.scss
@@ -3,6 +3,12 @@
     grid-template-columns: 1fr 3fr;
 }
 
+h2 {
+    color: var(--PRIMARY);
+}
+
 h1 {
     color: var(--PRIMARY-120);
+    font-size: 2em !important;
+    margin: 0;
 }
