--- a/src/Application/Layout/Detail/detail.scss
+++ b/src/Application/Layout/Detail/detail.scss
@@ -1,6 +1,9 @@
 .details {
     display: grid;
     grid-template-columns: 1fr 3fr;
+    padding: 1em;
+    padding-top: 0;
+    padding-bottom: 4em;
 }
 
 h2 {
